Updated with coding pirates title.

--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,14 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title:            jekyllDecent
-subtitle:         Example Blog
-description:      This is the jekyllTheme example blog. It only exists to demonstrate how the theme looks and feels.
-keywords:         demo theme example github jekyll features
-language:         "en" # default language of the blog. Language codes: http://www.w3schools.com/tags/ref_language_codes.asp
+title:            Coding Pirates
+subtitle:         Lokalafdelingen på IT Universitetet
+description:      Her finder du billeder og video fra klubaften, information til interesserede frivillige samt børnenes projekter.
+keywords:         coding pirates itu it universitetet coding children programmering creativity
+language:         "da" # default language of the blog. Language codes: http://www.w3schools.com/tags/ref_language_codes.asp
 
-baseurl:          "/jekyllDecent" # the subpath of your site, e.g. /blog
-url:              "" # the base hostname & protocol for your site. Have a look at robots.txt as well!
+baseurl:          "/itu.codingpirates.dk" # the subpath of your site, e.g. /blog
+url:              "nallic.github.io" # the base hostname & protocol for your site. Have a look at robots.txt as well!
 permalink:        /blog/:categories/:title
 cover:            /assets/mountain-cover.jpg
 disqus_shortname: "jekylldecent"
